--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ body {
   z-index: -1; /* Coloca el video detrás del contenido */
 }
 
+h1{
+  color: #007bff;
+
+}
+
 #background-video {
   width: 100%;
   height: 100%;
