--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,12 @@ header {
 header h1 {
   font-size: 2.5em;
   animation: pulse 2s infinite; /* Animación de pulso */
+  text-align: center;
 }
+ .tablacenter th{
+  text-align: center;
+
+ }
 
 @keyframes pulse {
   0% { transform: scale(1); }
@@ -88,6 +93,7 @@ section {
 section h2 {
   color: #007bff; /* Azul */
   margin-bottom: 0.5em;
+  
 }
 
 /* Estilos de la tabla */
